# ice

./: .gitignore  Cargo.toml  DEV.md  README.md  project.md
assets/: ice.toml
res/icons/: CREDITS.md
src/: api.rs  app.rs  conf.rs  config.rs  consts.rs  geo.rs  main.rs  sys.rs  time.rs  ui.rs  units.rs  weather.rs
src/api/: current.rs  daily.rs  geocoding.rs
src/app/: location.rs  network.rs  system.rs
src/ui/: modal.rs  widgets.rs
