[package]
name = "ice"
version = "0.1.0"
edition = "2024"
description = "Very simple and stupid environment for ArmbianOS"
license = "MIT"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
# futures = "0.3.31"
# futures-util = "0.3.31"
iced = { version = "0.13.1", default-features = false, features = ["image", "tiny-skia", "tokio"] }
# iced = { version = "0.13.1", features = ["image", "svg", "tokio"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
